--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,7 @@
     "suppressImplicitAnyIndexErrors": true
   },
   "exclude": [
-    "node_modules",
-    "typings"
+    "node_modules"
   ],
   "compileOnSave": false
 }
