--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@angular/platform-browser": "^2.0.0",
     "@angular/platform-browser-dynamic": "^2.0.0",
     "@angular/router": "^3.0.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^2.1.2",
     "core-js": "^2.4.1",
     "rxjs": "^5.0.0-beta.12",
     "webpack": "^1.13.2",
