--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^2.1.2",
     "core-js": "^2.4.1",
+    "immutable": "^3.8.1",
     "rxjs": "^5.0.0-beta.12",
     "webpack": "^1.13.2",
     "zone.js": "^0.6.23"
