--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@angular/platform-browser-dynamic": "^2.0.0",
     "@angular/router": "^3.0.0",
     "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^2.0.0-beta.3",
     "@ngrx/store": "^2.1.2",
     "@ngrx/store-devtools": "^3.0.2",
     "@ngrx/store-log-monitor": "^3.0.2",
