--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "webpack-dev-server": "^1.15.2"
   },
   "scripts": {
-    "start": "webpack-dev-server --content-base dev --inline --port 7777",
+    "start": "webpack-dev-server --content-base dev --inline --port 7777 --host 0.0.0.0",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "typings install"
   },
