--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "angular2-template-loader": "^0.5.0",
     "eslint": "git+https://github.com/eslint/eslint.git#master",
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.10",
@@ -27,7 +26,7 @@
     "webpack-dev-server": "^1.15.2"
   },
   "scripts": {
-    "start": "webpack-dev-server --content-base dev --inline --hot --port 7777",
+    "start": "webpack-dev-server --content-base dev --inline --port 7777",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "typings install"
   },
