--- a/server/package.json
+++ b/server/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2"
+  },
+  "devDependencies": {
+    "express": "^4.14.0"
   }
 }
