--- a/package.json
+++ b/package.json
@@ -4,27 +4,27 @@
   "description": "tutoriel",
   "main": "index.js",
   "dependencies": {
-    "@angular/common": "^2.0.0",
-    "@angular/compiler": "^2.0.0",
-    "@angular/core": "^2.0.0",
-    "@angular/forms": "^2.0.0",
-    "@angular/http": "^2.0.0",
-    "@angular/platform-browser": "^2.0.0",
-    "@angular/platform-browser-dynamic": "^2.0.0",
-    "@angular/router": "^3.0.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.0.0-beta.12",
-    "webpack": "^1.13.2",
-    "zone.js": "^0.6.23"
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/router": "3.0.0",
+    "core-js": "2.4.1",
+    "rxjs": "5.0.0-beta.12",
+    "webpack": "1.13.2",
+    "zone.js": "0.6.23"
   },
   "devDependencies": {
-    "angular2-template-loader": "^0.5.0",
+    "angular2-template-loader": "0.5.0",
     "eslint": "git+https://github.com/eslint/eslint.git#master",
-    "ts-loader": "^0.8.2",
-    "typescript": "^1.8.10",
-    "typings": "^1.3.3",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.2"
+    "ts-loader": "0.8.2",
+    "typescript": "1.8.10",
+    "typings": "1.3.3",
+    "webpack": "1.13.2",
+    "webpack-dev-server": "1.15.2"
   },
   "scripts": {
     "start": "webpack-dev-server --content-base dev --inline --port 7777",
